Fix bug bg not showing when initial pumpkin state

--- a/src/App.css
+++ b/src/App.css
@@ -52,15 +52,22 @@ body {
 }
 
 .display {
-    height: 100%;
+    position: relative;
+    height: 0;
     width: 100%;
+    padding-bottom: 100%;
     background-image: url("./img/background.png");
     background-size: cover;
 }
 
 .pumpkin {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
+    object-fit: contain;
 }
 
 .icon-row {
